[gd_scene load_steps=7 format=3 uid="uid://xmwps1imx1sa"]

[ext_resource type="Script" uid="uid://bksf3a27nxypf" path="res://main.gd" id="1_h2yge"]
[ext_resource type="PackedScene" uid="uid://b0fvb0xehi8tk" path="res://bird.tscn" id="1_ig7tw"]
[ext_resource type="PackedScene" uid="uid://cy755y4tu6jnn" path="res://pipe.tscn" id="2_1bvp3"]
[ext_resource type="PackedScene" uid="uid://bk4wpqxddvis5" path="res://hud.tscn" id="3_lquwl"]
[ext_resource type="Texture2D" uid="uid://decr16hy4spsb" path="res://sprites/background-day.png" id="4_1bvp3"]

[sub_resource type="SegmentShape2D" id="SegmentShape2D_ig7tw"]
a = Vector2(479, 10)

[node name="Main" type="Node"]
script = ExtResource("1_h2yge")
pipe_scene = ExtResource("2_1bvp3")
bird_scene = ExtResource("1_ig7tw")

[node name="HUD" parent="." instance=ExtResource("3_lquwl")]

[node name="TextureRect" type="TextureRect" parent="."]
offset_top = 1.0
offset_right = 482.0
offset_bottom = 620.0
texture = ExtResource("4_1bvp3")

[node name="TopLine" type="StaticBody2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="TopLine"]
position = Vector2(0, 2)
shape = SubResource("SegmentShape2D_ig7tw")

[node name="BottomLine" type="StaticBody2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="BottomLine"]
position = Vector2(2, 611)
shape = SubResource("SegmentShape2D_ig7tw")

[node name="PipeTimer" type="Timer" parent="."]
wait_time = 1.5

[node name="ScoreTimer" type="Timer" parent="."]

[connection signal="start_game" from="HUD" to="." method="_on_hud_start_game"]
[connection signal="timeout" from="PipeTimer" to="." method="_on_pipe_timer_timeout"]
